--- a/popup/index.html
+++ b/popup/index.html
@@ -9,37 +9,42 @@
 
     <template id="js-template">
       <section id="js-current-data" class="current-password">
-        <div>Current password</div>
+        <div class="title">Current password</div>
 
         <form action="/" id="js-set-password">
           <input type="password" name="password" value="{{=currentPassword}}" placeholder="Type a password to encrypt your session" autocomplete="off" required />
         </form>
 
-        <a id="js-toggle-password-visible" href="#">Show</a>
-        <a id="js-reset-password" href="#">Reset</a>
-        <a id="js-set-new-password" href="#">Set</a>
+        <div class="text-center">
+          <a id="js-toggle-password-visible" href="#">Show</a>
+          <a id="js-reset-password" href="#">Reset</a>
+          <a id="js-set-new-password" href="#">Set</a>
+        </div>
       </section>
 
       <hr />
 
       <section class="share {{!currentPassword}} hidden {{/!currentPassword}}">
-        <button id="js-share-session-btn" class="btn">Share current session</button>
+        <div class="title">Current Session</div>
+        <button id="js-share-session-btn" class="btn">Share</button>
         <div id="js-shared-session" class="shared-session hidden">
           <pre></pre>
-          <a id="js-session-select" href="#">Select</a>
-          <a id="js-session-hide" href="#">Hide</a>
+
+          <div class="text-center">
+            <a id="js-session-select" href="#">Select text</a>
+            <a id="js-session-hide" href="#">Hide</a>
+          </div>
         </div>
       </section>
 
       <hr class="{{!currentPassword}} hidden {{/!currentPassword}}" />
 
       <section class="restore">
-        <div>Restore session</div>
+        <div class="title">Restore session</div>
         <form action="/" id="js-restore-session">
           <textarea name="data" id="" placeholder="Encrypted session" rows="10"></textarea>
-          <div>
-            <input type="text" name="password" placeholder="Password" /><input type="submit" class="btn" value="Restore session" />
-          </div>
+          <input type="text" name="password" placeholder="Password" />
+          <input type="submit" class="btn" value="Restore session" />
         </form>
       </section>
     </template>
