Abstract code a bit better and make it work again

--- a/popup/index.html
+++ b/popup/index.html
@@ -52,6 +52,8 @@
     <script src="aes-min.js"></script>
     <script src="t.min.js"></script>
     <script src="configuration.js"></script>
+    <script src="aes.js"></script>
+    <script src="cookieManager.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
