Re-organice files

--- a/popup/index.html
+++ b/popup/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>ShareSafe</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="body">
     <div id="app" class="app"></div>
@@ -138,18 +138,18 @@
     </template>
 
 
-    <script src="clipboard.min.js"></script>
-    <script src="t.min.js"></script>
-    <script src="aes-min.js"></script>
+    <script src="js/vendor/clipboard.min.js"></script>
+    <script src="js/vendor/t.min.js"></script>
+    <script src="js/vendor/aes-min.js"></script>
 
-    <script src="log.js"></script>
-    <script src="http.js"></script>
-    <script src="aes.js"></script>
-    <script src="shareText.js"></script>
-    <script src="configuration.js"></script>
-    <script src="cookieManager.js"></script>
+    <script src="js/log.js"></script>
+    <script src="js/http.js"></script>
+    <script src="js/aes.js"></script>
+    <script src="js/shareText.js"></script>
+    <script src="js/configuration.js"></script>
+    <script src="js/cookieManager.js"></script>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
 
