--- a/popup/index.html
+++ b/popup/index.html
@@ -14,12 +14,9 @@
         <div class="menu-logo">
           <img src="../icons/128.png" alt="ShareSafe logo" width="48">
         </div>
-        <br />
-        <button class="btn" data-menu="share">Share session</button>
-        <br />
-        <button class="btn" data-menu="restore">Restore session</button>
-        <br />
-        <button class="btn" data-menu="history">Share history</button>
+        <button class="m-t btn" data-menu="share">Share session</button>
+        <button class="m-t btn" data-menu="restore">Restore session</button>
+        <button class="m-t btn" data-menu="history">Share history</button>
       </section>
     </template>
 
@@ -32,18 +29,17 @@
       <section id="js-current-data" class="share">
         <div class="title">Current Session</div>
 
-        <div>
-          <br />
-          <div class="small">Public Key</div>
+        <form action="/" id="js-share-session" class="m-t">
+          <div class="small">Recipient public key</div>
 
           <div class="pubkey-container">
             <input id="js-pubkey" type="text" name="pubkey" value="" placeholder="Public key of the box you're sharing with" required />
           </div>
-        </form>
 
-        <div class="share-session-btn-container">
-          <button id="js-share-session-btn" class="btn">Share</button>
-        </div>
+          <div class="share-session-btn-container">
+            <input type="submit" name="submit" class="btn" value="Share" disabled />
+          </div>
+        </form>
 
         <div id="js-shared-session" class="shared-session hidden">
           <div class="small">Encrypted session <span id="js-session-hide" class="link delete">X</span></div>
@@ -51,12 +47,11 @@
           <pre id="js-shared-session-text" class="encrypted-data share-result"></pre>
           <div data-clipboard data-clipboard-target="#js-shared-session-text" class="link">Copy text</div>
 
-          <br />
+          <div class="m-t">
+            <span id="js-share-text-link" class="share-text-link share-result"></span><span class="link" data-clipboard data-clipboard-target="#js-share-text-link">Copy</span>
+          </div>
 
-          <span id="js-share-text-link" class="share-text-link share-result"></span><span class="link" data-clipboard data-clipboard-target="#js-share-text-link">Copy</span>
-
-          <div class="actions">
-            <br />
+          <div class="m-t actions">
             <span data-clipboard data-clipboard-text="https://chrome.google.com/webstore/detail/sharesafe/glifngepkcmfolnojchcfiinmjgeablm" class="link">Copy ShareSafe install link</span>
           </div>
         </div>
@@ -73,18 +68,21 @@
 
       <section class="restore">
         <div class="title">Restore session</div>
-        <form action="/" id="js-restore-session">
-          <br />
 
+        <div class="m-t">
+          <div class="small">Your public key</div>
+          <input id="js-user-pubkey" name="pubkey" type="text" value="{{=publicKey}}" readonly>
+          <span data-clipboard data-clipboard-target="#js-user-pubkey" class="link">Copy text</span>
+        </div>
+
+        <form action="/" id="js-restore-session" class="m-t">
           <div>
             <div class="small">Encrypted session</div>
             <textarea name="data" placeholder="Ex: U2FsdGVkX1/6bHkbv2PuXxed78svar+Pf9c+U3ojbfnlCuy1KuFAZwXXbm/L3e2v2IQQbf8iAwlkqrxazN9Og==" rows="10"></textarea>
           </div>
 
-          <br />
-
-          <div class="restore-session-btn">
-            <input type="submit" class="btn" value="Restore session" />
+          <div class="m-t restore-session-btn">
+            <input type="submit" name="submit" class="btn" value="Restore session" disabled />
           </div>
         </form>
       </section>
