--- a/popup/index.html
+++ b/popup/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>ShareSafe</title>
 
+    <link rel="stylesheet" href="css/vendor/balloon.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="body">
@@ -10,7 +11,7 @@
 
 
     <template id="js-template-menu">
-      <section id="js-menu" class="menu">
+      <section class="menu">
         <div class="menu-logo">
           <img src="../icons/128.png" alt="ShareSafe logo" width="48">
         </div>
@@ -26,14 +27,14 @@
         <img src="../icons/128.png" alt="ShareSafe logo" width="30">
       </div>
 
-      <section id="js-current-data" class="share">
+      <section class="share">
         <div class="title">Current Session</div>
 
         <form action="/" id="js-share-session" class="m-t">
-          <div class="small">Recipient public key</div>
+          <div class="small">Recipient public key <span class="link" data-balloon="Paste the public key of the person you want to share your extension with. She can find it on the 'Restore Session' seccion." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
 
           <div class="pubkey-container">
-            <input id="js-pubkey" type="text" name="pubkey" value="" placeholder="Public key of the box you're sharing with" required />
+            <input id="js-pubkey" type="text" name="pubkey" value="" placeholder="Public key of the box you're sharing with" autocomplete="off" required />
           </div>
 
           <div class="share-session-btn-container">
@@ -42,21 +43,22 @@
         </form>
 
         <div id="js-shared-session" class="shared-session hidden">
-          <div class="small">Encrypted session <span id="js-session-hide" class="link delete">X</span></div>
+          <div class="small">Encrypted session <span class="link" data-balloon="Share this text with the owner of the public key" data-balloon-length="medium" data-balloon-pos="right">?</span> <span id="js-session-hide" class="link delete">X</span></div>
 
           <pre id="js-shared-session-text" class="encrypted-data share-result"></pre>
-          <div data-clipboard data-clipboard-target="#js-shared-session-text" class="link">Copy text</div>
+          <div class="text-right">
+            <div class="action-icon" data-clipboard data-clipboard-target="#js-shared-session-text" data-balloon="Copy encryption" data-balloon-pos="right"><img src="./images/copy.svg" alt="Copy encryption" width="12" /></div>
 
-          <div class="m-t">
-            <span id="js-share-text-link" class="share-text-link share-result"></span><span class="link" data-clipboard data-clipboard-target="#js-share-text-link">Copy</span>
           </div>
 
-          <div class="m-t actions">
-            <span data-clipboard data-clipboard-text="https://chrome.google.com/webstore/detail/sharesafe/glifngepkcmfolnojchcfiinmjgeablm" class="link">Copy ShareSafe install link</span>
+          <div class="m-t">
+            <span id="js-share-text-link" class="share-text-link share-result"></span>
+            <div class="action-icon" data-balloon="Copy link" data-clipboard data-clipboard-target="#js-share-text-link"><img src="./images/copy.svg" alt="Copy link" width="12" /></div>
           </div>
         </div>
       </section>
 
+      <div id="js-error" class="error"></div>
       <div class="js-go-back go-back link">&lsaquo; back</div>
     </template>
 
@@ -72,12 +74,13 @@
         <div class="m-t">
           <div class="small">Your public key</div>
           <input id="js-user-pubkey" name="pubkey" type="text" value="{{=publicKey}}" readonly>
-          <span data-clipboard data-clipboard-target="#js-user-pubkey" class="link">Copy text</span>
+          <div class="action-icon" data-balloon="Copy key" data-clipboard data-clipboard-target="#js-user-pubkey"><img src="./images/copy.svg" alt="Copy key" width="12" /></div>
+          <div id="js-regenerate-keys" class="action-icon" data-balloon="Regenerate keys. Remember that by regenerating your keys you'll loose your current pair forever, so you won't be able or regerate old sessions." data-balloon-length="large" data-balloon-pos="left"><img src="./images/refresh.svg" alt="Regenerate keys" width="12" /></div>
         </div>
 
         <form action="/" id="js-restore-session" class="m-t">
           <div>
-            <div class="small">Encrypted session</div>
+            <div class="small">Encrypted session <span class="link" data-balloon="Paste the encrypted result shared with you. If you gave the sender you public key, you'll be the only one able to decrypt it." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
             <textarea name="data" placeholder="Ex: U2FsdGVkX1/6bHkbv2PuXxed78svar+Pf9c+U3ojbfnlCuy1KuFAZwXXbm/L3e2v2IQQbf8iAwlkqrxazN9Og==" rows="10"></textarea>
           </div>
 
@@ -87,6 +90,7 @@
         </form>
       </section>
 
+      <div id="js-error" class="error"></div>
       <div class="js-go-back go-back link">&lsaquo; back</div>
     </template>
 
@@ -118,6 +122,7 @@
         </div>
       </section>
 
+      <div id="js-error" class="error"></div>
       <div class="js-go-back go-back link">&lsaquo; back</div>
     </template>
 
