--- a/popup/index.html
+++ b/popup/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html>
   <head>
-    <title>ShareSafe</title>
+    <title>ShareAccount</title>
 
     <link rel="stylesheet" href="css/vendor/balloon.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="body">
+
     <div id="app" class="app"></div>
 
 
     <template id="js-template-menu">
+      <div class="app-logo">
+        <img src="./images/header-logo.png" alt="Share Account logo" width="110">
+      </div>
+
       <section class="menu">
-        <div class="menu-logo">
-          <img src="../icons/128.png" alt="ShareSafe logo" width="48">
-        </div>
-        <button class="m-t btn" data-menu="share">Share session</button>
+        <button class="btn"     data-menu="share">Share session</button>
         <button class="m-t btn" data-menu="restore">Restore session</button>
         <button class="m-t btn" data-menu="history">Share history</button>
       </section>
@@ -23,10 +25,6 @@
 
 
     <template id="js-template-share">
-      <div class="app-logo">
-        <img src="../icons/128.png" alt="ShareSafe logo" width="30">
-      </div>
-
       <section class="share">
         <div class="title">Current Session</div>
 
@@ -37,13 +35,14 @@
             <input id="js-pubkey" type="text" name="pubkey" value="" placeholder="Public key of the box you're sharing with" autocomplete="off" required />
           </div>
 
-          <div class="share-session-btn-container">
-            <input type="submit" name="submit" class="btn" value="Share" disabled />
+          <div class="flex-container">
+            <div class="js-go-back go-back link">&lsaquo; back</div>
+            <input type="submit" name="submit" class="btn pull-right" value="Share" disabled />
           </div>
         </form>
 
         <div id="js-shared-session" class="shared-session hidden">
-          <div class="small">Encrypted session <span class="link" data-balloon="Share this text with the owner of the public key" data-balloon-length="medium" data-balloon-pos="right">?</span> <span id="js-session-hide" class="link delete">X</span></div>
+          <div class="small">Encrypted session <span class="link" data-balloon="Share this text with the owner of the public key" data-balloon-length="medium" data-balloon-pos="right">?</span> <span id="js-session-hide" class="link delete">x</span></div>
 
           <pre id="js-shared-session-text" class="encrypted-data share-result"></pre>
           <div class="text-right">
@@ -59,15 +58,10 @@
       </section>
 
       <div id="js-error" class="error"></div>
-      <div class="js-go-back go-back link">&lsaquo; back</div>
     </template>
 
 
     <template id="js-template-restore">
-      <div class="app-logo">
-        <img src="../icons/128.png" alt="ShareSafe logo" width="30">
-      </div>
-
       <section class="restore">
         <div class="title">Restore session</div>
 
@@ -84,22 +78,18 @@
             <textarea name="data" placeholder="Ex: U2FsdGVkX1/6bHkbv2PuXxed78svar+Pf9c+U3ojbfnlCuy1KuFAZwXXbm/L3e2v2IQQbf8iAwlkqrxazN9Og==" rows="10"></textarea>
           </div>
 
-          <div class="m-t restore-session-btn">
-            <input type="submit" name="submit" class="btn" value="Restore session" disabled />
+          <div class="restore-session-actions flex-container">
+            <div class="js-go-back go-back link">&lsaquo; back</div>
+            <input type="submit" name="submit" class="btn pull-right" value="Restore session" disabled />
           </div>
         </form>
       </section>
 
       <div id="js-error" class="error"></div>
-      <div class="js-go-back go-back link">&lsaquo; back</div>
     </template>
 
 
     <template id="js-template-history">
-      <div class="app-logo">
-        <img src="../icons/128.png" alt="ShareSafe logo" width="30">
-      </div>
-
       <section class="history">
         <div class="title">Shared sessions</div>
         <div class="explanation">We only keep track of URLs and titles for a month, no sessions</div>
@@ -107,7 +97,7 @@
         <div class="sessions">
           {{hasSessions}}
             {{@sessions}}
-              <h5>Shared on {{=_key}} <span class="link delete js-delete" data-key="{{=_key}}">X</span></h5>
+              <h5>Shared on {{=_key}} <span class="link delete js-delete" data-key="{{=_key}}">x</span></h5>
               <ul>
                 {{@_val}}
                   <li>
@@ -120,10 +110,11 @@
             <div class="small">No shared session yet</div>
           {{/hasSessions}}
         </div>
+
+        <div class="js-go-back go-back link">&lsaquo; back</div>
       </section>
 
       <div id="js-error" class="error"></div>
-      <div class="js-go-back go-back link">&lsaquo; back</div>
     </template>
 
 
