--- a/popup/index.html
+++ b/popup/index.html
@@ -29,10 +29,10 @@
         <div class="title">Current Session</div>
 
         <form action="/" id="js-share-session" class="m-t">
-          <div class="small">Recipient public key <span class="link" data-balloon="Paste the public key of the person you want to share your extension with. She can find it on the 'Restore Session' seccion." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
+          <div class="small">Recipient code <span class="link" data-balloon="Paste the code of the person you want to share your extension with. It can be found on the 'Restore Session' seccion." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
 
           <div class="pubkey-container">
-            <input id="js-pubkey" type="text" name="pubkey" value="" placeholder="Public key of the box you're sharing with" autocomplete="off" required />
+            <input id="js-pubkey" type="text" name="pubkey" value="" placeholder="Code of the box you're sharing with" autocomplete="off" required />
           </div>
 
           <div class="flex-container">
@@ -42,11 +42,11 @@
         </form>
 
         <div id="js-shared-session" class="shared-session hidden">
-          <div class="small">Encrypted session <span class="link" data-balloon="Share this text with the owner of the public key" data-balloon-length="medium" data-balloon-pos="right">?</span> <span id="js-session-hide" class="link delete">x</span></div>
+          <div class="small">Encrypted session <span class="link" data-balloon="Share this text with the owner of the code" data-balloon-length="medium" data-balloon-pos="right">?</span> <span id="js-session-hide" class="link delete">x</span></div>
 
           <pre id="js-shared-session-text" class="encrypted-data share-result"></pre>
           <div class="text-right">
-            <div class="action-icon" data-clipboard data-clipboard-target="#js-shared-session-text" data-balloon="Copy encryption" data-balloon-pos="right"><img src="./images/copy.svg" alt="Copy encryption" width="12" /></div>
+            <div class="action-icon" data-clipboard data-clipboard-target="#js-shared-session-text" data-balloon="Copy encryption" data-balloon-pos="left"><img src="./images/copy.svg" alt="Copy encryption" width="12" /></div>
 
           </div>
 
@@ -66,7 +66,7 @@
         <div class="title">Restore session</div>
 
         <div class="m-t">
-          <div class="small">Your public key</div>
+          <div class="small">Your code</div>
           <input id="js-user-pubkey" name="pubkey" type="text" value="{{=publicKey}}" readonly>
           <div class="action-icon" data-balloon="Copy key" data-clipboard data-clipboard-target="#js-user-pubkey"><img src="./images/copy.svg" alt="Copy key" width="12" /></div>
           <div id="js-regenerate-keys" class="action-icon" data-balloon="Regenerate keys. Remember that by regenerating your keys you'll loose your current pair forever, so you won't be able or regerate old sessions." data-balloon-length="large" data-balloon-pos="left"><img src="./images/refresh.svg" alt="Regenerate keys" width="12" /></div>
@@ -74,7 +74,7 @@
 
         <form action="/" id="js-restore-session" class="m-t">
           <div>
-            <div class="small">Encrypted session <span class="link" data-balloon="Paste the encrypted result shared with you. If you gave the sender you public key, you'll be the only one able to decrypt it." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
+            <div class="small">Encrypted session <span class="link" data-balloon="Paste the encrypted result shared with you. If you gave the sender you code, you'll be the only one able to decrypt it." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
             <textarea name="data" placeholder="Ex: U2FsdGVkX1/6bHkbv2PuXxed78svar+Pf9c+U3ojbfnlCuy1KuFAZwXXbm/L3e2v2IQQbf8iAwlkqrxazN9Og==" rows="10"></textarea>
           </div>
 
