--- a/popup/index.html
+++ b/popup/index.html
@@ -138,6 +138,8 @@
     <script src="js/cookieManager.js"></script>
 
     <script src="js/main.js"></script>
+
+    <script async src="js/analytics.js"></script>
   </body>
 </html>
 
