Mini updates, scrollbar, favicon, logo height

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="rectangle-bound rectangle-upper-bound"></div>
 
-  <div class="wrapper container">
+  <div class="wrapper container-fluid">
     <div class="row">
       <div class="col-xs-12">
         <img src="images/logo.png" class="logo img-responsive" alt="ShareAccount logo" width="350" />
