Link to website

--- a/popup/index.html
+++ b/popup/index.html
@@ -12,8 +12,10 @@
 
 
     <template id="js-template-menu">
-      <div class="app-logo">
-        <img src="./images/header-logo.png" alt="Share Account logo" width="110">
+      <div class="menu-app-logo">
+        <a href="https://shareaccount.nicosantangelo.com" target="_blank">
+          <img src="./images/header-logo.png" alt="Share Account logo" width="110">
+        </a>
       </div>
 
       <section class="menu">
