--- a/index.html
+++ b/index.html
@@ -19,28 +19,41 @@
 
   <div class="wrapper container-fluid">
     <div class="row">
-      <div class="col-xs-12">
-        <img src="images/logo.png" class="logo img-responsive" alt="ShareAccount logo" width="350" />
+      <div class="col-xs-offset-1 col-xs-6">
+        <div class="siema">
+          <img src="images/1.png" class="img-responsive" alt="Usage step 1">
+          <img src="images/2.png" class="img-responsive" alt="Usage step 2">
+          <img src="images/3.png" class="img-responsive" alt="Usage step 3">
+          <img src="images/4.png" class="img-responsive" alt="Usage step 4">
+          <img src="images/5.png" class="img-responsive" alt="Usage step 5">
+        </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-xs-offset-1 col-xs-10">
-        <p class="description">Chrome Extension to share your account <b>without</b><br class="hidden-xs" /> giving out your <b>password</b></p>
-      </div>
-    </div>
+      <div class="col-xs-5">
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="images/logo.png" class="logo img-responsive" alt="ShareAccount logo" width="300" />
+          </div>
+        </div>
 
-    <div class="row">
-      <div class="col-xs-12 text-center">
-        <a href="https://chrome.google.com/webstore/detail/shareaccount/glifngepkcmfolnojchcfiinmjgeablm" id="js-install-button" class="button button-primary install-button">
-          INSTALL
-        </a>
+        <div class="row">
+          <div class="col-xs-offset-1 col-xs-10">
+            <p class="description">Chrome Extension to share your account <b>without</b> giving out your <b>password</b></p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <a href="https://chrome.google.com/webstore/detail/shareaccount/glifngepkcmfolnojchcfiinmjgeablm" id="js-install-button" class="button button-primary install-button">
+              INSTALL
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="rectangle-bound rectangle-lower-bound"></div>
-
+  <script src="js/siema.min.js"></script>
   <script src="js/main.js"></script>
 
   <script>
