--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
   <div class="wrapper container-fluid">
     <div class="row">
-      <div class="col-xs-offset-1 col-xs-6">
+      <div class="col-xs-12">
+        <img src="images/logo.png" class="logo img-responsive" alt="ShareAccount logo" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-10">
         <div class="siema">
           <img src="images/1.png" class="img-responsive" alt="Usage step 1">
           <img src="images/2.png" class="img-responsive" alt="Usage step 2">
@@ -28,25 +34,20 @@
           <img src="images/5.png" class="img-responsive" alt="Usage step 5">
         </div>
       </div>
+    </div>
 
-      <div class="col-xs-5">
-        <div class="row">
-          <div class="col-xs-12">
-            <img src="images/logo.png" class="logo img-responsive" alt="ShareAccount logo" width="300" />
-          </div>
-        </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+        <p class="description">Chrome Extension to share your account <b>without</b> giving out your <b>password</b></p>
+      </div>
+    </div>
 
-        <div class="row">
-          <div class="col-xs-offset-1 col-xs-10">
-            <p class="description">Chrome Extension to share your account <b>without</b> giving out your <b>password</b></p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-12 text-center">
-            <a href="https://chrome.google.com/webstore/detail/shareaccount/glifngepkcmfolnojchcfiinmjgeablm" id="js-install-button" class="button button-primary install-button">
-              INSTALL
-            </a>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="install-container">
+          <a href="https://chrome.google.com/webstore/detail/shareaccount/glifngepkcmfolnojchcfiinmjgeablm" id="js-install-button" class="button button-primary install-button">INSTALL</a>
+          <div class="extra-info">
+            <a href="https://github.com/NicoSantangelo/shareaccount">More info</a>
           </div>
         </div>
       </div>
