Add controls to the slider

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           <img src="images/5.png" class="img-responsive" alt="Usage step 5">
         </div>
       </div>
+      <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+        <br />
+        <span id="js-prev" class="link pull-left">Previous</span>
+        <span id="js-next" class="link pull-right">Next</span>
+      </div>
     </div>
 
     <div class="row">
