Update sections order

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     </div>
 
     <div class="row">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+        <p class="description">Chrome Extension to share your account <b>without</b> giving out your <b>password</b></p>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-xs-12 col-sm-offset-2 col-sm-8">
         <div class="siema">
           <img src="images/1.png" class="img-responsive" alt="Usage step 1">
@@ -34,15 +40,11 @@
       </div>
 
       <div class="col-xs-12 col-sm-offset-2 col-sm-8">
-        <br />
-        <span id="js-prev" class="link pull-left">Previous</span>
-        <span id="js-next" class="link pull-right">Next</span>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12 col-sm-offset-1 col-sm-10">
-        <p class="description">Chrome Extension to share your account <b>without</b> giving out your <b>password</b></p>
+        <div class="siema-actions">
+          <span id="js-prev" class="link pull-left">Previous</span>
+          <div class="disclaimer">This is only an example, you can use it with any account you like!</div>
+          <span id="js-next" class="link pull-right">Next</span>
+        </div>
       </div>
     </div>
 
