--- a/popup/index.html
+++ b/popup/index.html
@@ -35,13 +35,13 @@
           <div class="small">Recipient code <span class="link" data-balloon="Paste the code of the person you want to share your extension with. It can be found on the 'Restore Session' seccion." data-balloon-length="medium-xl" data-balloon-pos="right">?</span></div>
 
           <div class="input-container">
-            <input type="text" name="pubkey" value="2c8c7ed191c330f39fd2624ef3f28c7b5c33300bf392549983c66ef6e5fe56970322f486dc301bcadca8acd211f2fd185a720736ac69131c3a71fed1fdaa20d4" placeholder="Code of the box you're sharing with" autocomplete="off" required />
+            <input type="text" name="pubkey" value="" placeholder="Code of the box you're sharing with" autocomplete="off" required />
           </div>
 
           <div class="small">Timeout in minutes <span class="link" data-balloon="Explanation." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
 
           <div class="input-container">
-            <input type="text" name="timeoutInMinutes" value="10" placeholder="Code of the box you're sharing with" />
+            <input type="text" name="timeoutInMinutes" value="" placeholder="Timeout in hours. It'll last a month by deafult." />
           </div>
 
           <div class="flex-container">
@@ -86,7 +86,7 @@
 
         <div class="your-code">
           <div class="small">Your code</div>
-          <input id="js-user-pubkey" name="pubkey" type="text" value="{{=publicKey}}" readonly>
+          <input id="js-user-pubkey" name="pubkey" type="text" value="{{=publicKey}}" readonly />
           <div class="action-icon" data-balloon="Copy code" data-clipboard data-clipboard-target="#js-user-pubkey"><img src="./images/copy.svg" alt="Copy code" width="12" /></div>
           <div id="js-regenerate-keys" class="action-icon" data-balloon="Regenerate code. Remember that by regenerating your code you'll loose your current one forever, so you won't be able or regerate old sessions." data-balloon-length="large" data-balloon-pos="left"><img src="./images/refresh.svg" alt="Regenerate code" width="12" /></div>
         </div>
@@ -94,7 +94,11 @@
         <form action="/" id="js-restore-session" class="m-t">
           <div>
             <div class="small">Encrypted session <span class="link" data-balloon="Paste the encrypted result shared with you. If you gave the sender you code, you'll be the only one able to decrypt it." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
-            <textarea name="data" placeholder='For example: {"iv":"C+Qfxtx6UM6YkQ7glsVsLg==", "v":1, "iter":10000, "ks":128, "ts":64, "mode":"ccm", "adata":"", "cipher":"aes", "kemtag":"dJN3vJbV4C", "ct":"psRDxcWb"}' rows="10"></textarea>
+
+            <textarea name="encrypted-data" placeholder='For example: {"iv":"C+Qfxtx6UM6YkQ7glsVsLg==", "v":1, "iter":10000, "ks":128, "ts":64, "mode":"ccm", "adata":"", "cipher":"aes", "kemtag":"dJN3vJbV4C", "ct":"psRDxcWb"}
+
+Remember that the session might end at any time.' rows="10"></textarea>
+            <div id="js-restore-notice" class="explanation"></div>
           </div>
 
           <div class="restore-session-actions flex-container">
