Minutes to Hours

--- a/popup/index.html
+++ b/popup/index.html
@@ -38,10 +38,10 @@
             <input type="text" name="pubkey" value="" placeholder="Code of the box you're sharing with" autocomplete="off" required />
           </div>
 
-          <div class="small">Timeout in minutes <span class="link" data-balloon="Explanation." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
+          <div class="small">Timeout in hours <span class="link" data-balloon="Explanation." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
 
           <div class="input-container">
-            <input type="text" name="timeoutInMinutes" value="" placeholder="Timeout in hours. It'll last a month by deafult." />
+            <input type="text" name="timeout" value="" placeholder="Timeout in hours. It'll last a month by deafult." />
           </div>
 
           <div class="flex-container">
