Don't show prev/next on mobile

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
       <div class="col-xs-12 col-sm-offset-2 col-sm-8">
         <div class="siema-actions">
-          <span id="js-prev" class="link pull-left">Previous</span>
+          <span id="js-prev" class="link pull-left hidden-xs">Previous</span>
           <div class="disclaimer">This is only an example, you can use it with any account you like!</div>
-          <span id="js-next" class="link pull-right">Next</span>
+          <span id="js-next" class="link pull-right hidden-xs">Next</span>
         </div>
       </div>
     </div>
